--- a/loader.tmpl
+++ b/loader.tmpl
@@ -13,7 +13,7 @@ import (
 )
 
 func main() {
-	stmts, err := bunschema.New("{{ .Dialect }}"
+	stmts, err := bunschema.New(bunschema.Dialect("{{ .Dialect }}")
 		{{- if eq .Dialect "mssql" -}}
 			, bunschema.WithStmtDelimiter("\nGO")
 		{{- end -}}
