--- a/loader.tmpl
+++ b/loader.tmpl
@@ -7,13 +7,12 @@ import (
 	{{- range .Imports }}
 		"{{ . }}"
 	{{- end}}
-	"ariga.io/atlas-provider-bun/bunschema/dialect"
 	"ariga.io/atlas-provider-bun/bunschema"
 	_ "ariga.io/atlas-go-sdk/recordriver"
 )
 
 func main() {
-	stmts, err := bunschema.New(dialect.Dialect("{{ .Dialect }}")
+	stmts, err := bunschema.New(bunschema.Dialect("{{ .Dialect }}")
 		{{- if eq .Dialect "mssql" -}}
 			, bunschema.WithStmtDelimiter("\nGO")
 		{{- end -}}
